packages/svelte/tests/compiler-errors/samples/raw-mustaches-whitespace/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'expected_whitespace',
		message: 'Expected whitespace',
		position: [6, 6]
	}
});
